sidux-art-legacy (2009.01.1) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * Initial release.
  * add bootstrap.sh, to generate debian/control.
  * add postinst handling to bootstrap.sh.
  * fix postinst handling.
  * remove stray */debian/control.
  * add compat layer 7.
  * remove individual changelogs.
  * harmonize wallpapers.
  * move svg into view.
  * merge copyrights, thanks to RoEn.
  * add CC-by-SA 3.0 license text.

  [ Bernard Gray ]
  * initial acceptable (looking) kde4 compat kdm theme for ouranos
    - xml could do with serious cleanup/simplification
    - needs more thorough testing, xdmcp currently failing for me
  * redo kdm theme - thanks to destructchaos aka rgb 
  * fix ouranos/dm-kdm/Makefile, remove missing targets
  * make pontos/dm-kdm/background.svg 1920x1200 by default
  * migrate pontos/dm-kdm to kdm4
  * remove unneeded rect.svg from ouranos/dm-kdm/
  * remove temporary -destructchaos naming in KdmGreeters
  * change nyx/ to mirror source dir structure of newer art packages
  * change eros/ to mirror source dir structure of newer art packages
  * remove kde4 incompatible nyx/theme-kde/ files
  * change gaia/ to mirror source dir structure of newer art packages
  * add chaos kdm theme - thanks destructchaos/rgb
  * update kdm theme xml files, thanks rgb

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 27 May 2009 22:21:07 +1000