@@ -1,0 +1,124 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE greeter SYSTEM "greeter.dtd">
+<!-- sidux 2007-02 tartaros KDM theme -->
+<greeter>
+	<!-- background texture -->
+	<item type="pixmap" id="background" background="true">
+		<normal file="background.png" />
+		<pos x="0" y="0" width="100%" height="100%" />
+	</item>
+	
+	<!-- clock & date -->
+	<item type="label" id="clock">
+		<pos x="5%" y="1.5%" />
+		<normal color="#ffffff" font="Sans 15" />
+		<text>%c</text>
+	</item>
+	
+	<!-- user list -->
+	<item type="rect" id="userlist">
+		<pos x="14%" y="34%" width="20%" height="25%"/>
+	</item>
+	
+	<item type="rect">
+		<normal color="#ffffff" alpha="0"/>
+		<pos anchor="ce" x="-0" y="-0" width="box" height="box"/>
+		<box orientation="horizontal" spacing="10" xpadding="10">
+			
+			<!-- session menu -->
+			<item type="rect" id="session_button" button="true">
+				<pos anchor="w" width="box" height="box"/>
+				<box orientation="horizontal" spacing="10" xpadding="10">
+					<item type="pixmap">
+						<normal file="Session.png"/>
+						<prelight file="Session_2.png"/>
+						<active file="Session_2.png" tint="#c5c5c5"/>
+						<pos y="50%" anchor="w"/>
+					</item>
+					<item type="label">
+						<normal color="#ffffff" font="Sans 12"/>
+						<prelight color="#ffffff" font="Sans 12"/>
+						<active color="#c5c5c5" font="Sans 12"/>
+						<pos y="50%" anchor="w"/>
+						<stock type="session"/>
+					</item>
+				</box>
+			</item>
+			
+			<!-- system menu -->
+			<item type="rect" id="system_button" button="true">
+				<show modes="console" type="system"/>
+				<pos anchor="w" width="box" height="box"/>
+				<box orientation="horizontal" spacing="10" xpadding="10">
+					<item type="pixmap">
+						<normal file="System.png"/>
+						<prelight file="System_2.png"/>
+						<active file="System_2.png" tint="#c5c5c5"/>
+						<pos y="50%" anchor="w"/>
+					</item>
+					<item type="label">
+						<normal color="#ffffff" font="Sans 12"/>
+						<prelight color="#ffffff" font="Sans 12"/>
+						<active color="#c5c5c5" font="Sans 12"/>
+						<pos y="50%" anchor="w"/>
+						<stock type="system"/>
+					</item>
+				</box>
+			</item>
+		</box>
+	</item>
+	
+	<!-- caps lock warning -->
+	<item type="rect" id="caps-lock-warning">
+		<normal color="#FFFFFF" alpha="0"/>
+		<pos anchor="c" x="87%" y="60%" width="box" height="box"/>
+		<box orientation="vertical" min-width="400" xpadding="10" ypadding="5" spacing="0">
+			<item type="label">
+				<normal color="#93a2ff" font="Sans 12"/>
+				<pos x="50%" anchor="n"/>
+				<stock type="caps-lock-warning"/>
+			</item>
+		</box>
+	</item>
+	
+	<!-- login fields -->
+	<item type="rect">
+		<normal color="#ff0000" alpha="0"/>
+		<pos anchor="c" x="79%" y="48%" width="20%" height="box"/>
+		<box orientation="vertical" min-width="340" xpadding="0" ypadding="0" spacing="5">
+			
+			<!-- user name-->
+			<item type="label" id="username-label">
+				<pos anchor="nw" x="0"/>
+				<normal color="#bdd6e5" font="Sans 10"/>
+				<stock type="username-label"/>
+			</item>
+			<item type="entry" id="user-entry">
+				<pos anchor="nw" x="3%" height="24" width="75%"/>
+			</item>
+			
+			<!-- password-->
+			<item type="label" id="password-label">
+				<pos anchor="nw" x="0"/>
+				<normal color="#bdd6e5" font="Sans13 10"/>
+				<stock type="password-label"/>
+			</item>
+			<item type="entry" id="pw-entry">
+				<pos anchor="nw" x="3%" height="24" width="75%"/>
+			</item>
+			
+			<!-- go button -->
+			<item type="pixmap" button="true" id="login_button">
+				<pos anchor="se" x="-0" y="0" width="32" height="32"/>
+				<normal file="go.png"/>
+				<prelight file="go_2.png"/>
+			</item>
+		</box>
+	</item>
+	
+	<!-- login error -->
+	<item type="label" id="pam-error">
+		<normal color="#ff0000" font="Sans13"/>
+		<pos x="87%" y="58%" anchor="s"/>
+	</item>
+</greeter>
