@@ -29,5 +29,6 @@ sidux-art-legacy (2009.01.1) unstable; urgency=low
   * change gaia/ to mirror source dir structure of newer art packages
   * add chaos kdm theme - thanks destructchaos/rgb
   * update kdm theme xml files, thanks rgb
+  * add tartaros kdm skeleton, thanks rgb
 
- -- Bernard Gray <bernard.gray@gmail.com>  Wed, 27 May 2009 22:21:07 +1000
+ -- Bernard Gray <bernard.gray@gmail.com>  Wed, 27 May 2009 22:23:09 +1000
